syntax = "proto3";

service TaskService {
  rpc GetTask (TaskRequest) returns (TaskResponse);
  rpc GetTaskStats (Empty) returns (TaskStatsResponse);
}

message TaskRequest {
  string taskId = 1;
}

message TaskResponse {
  string taskId = 1;
  string title = 2;
  string description = 3;
  string status = 4;
  string createdAt = 5;
}

message TaskStatsResponse {
  int32 totalTasks = 1;
  int32 completedTasks = 2;
  int32 pendingTasks = 3;
  string lastCreatedTask = 4;
}

message Empty {}
